<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_cryptocurrency_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_currency" />

    <TextView
        android:id="@+id/text_cryptocurrency_sym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_currency_name"
        app:layout_constraintStart_toEndOf="@+id/image_cryptocurrency_icon"
        app:layout_constraintTop_toTopOf="@id/image_cryptocurrency_icon"
        tools:text="@string/currencies_list_sym_text" />

    <TextView
        android:id="@+id/text_cryptocurrency_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="@+id/text_cryptocurrency_sym"
        app:layout_constraintTop_toBottomOf="@id/text_cryptocurrency_sym"
        tools:text="@string/currencies_list_item_name" />

    <TextView
        android:id="@+id/text_cryptocurrency_market_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_cryptocurrency_sym"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_cryptocurrency_sym"
        tools:text="@string/currencies_list_item_market_cap" />

    <TextView
        android:id="@+id/text_cryptocurrency_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_cryptocurrency_name"
        tools:text="@string/currencies_list_item_price" />

    <TextView
        android:id="@+id/text_market_cap_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currencies_list_item_market_cap_rank"
        app:layout_constraintBottom_toBottomOf="@+id/text_cryptocurrency_market_cap"
        app:layout_constraintEnd_toStartOf="@+id/text_cryptocurrency_market_cap"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/currencies_list_item_price_text"
        app:layout_constraintBottom_toBottomOf="@+id/text_cryptocurrency_price"
        app:layout_constraintEnd_toStartOf="@+id/text_cryptocurrency_price"
        app:layout_constraintTop_toTopOf="@+id/text_cryptocurrency_price"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>